# task

./: .coderabbit.yaml  .dockerignore  .gitattributes  .gitignore  .lintstagedrc.mjs  200.html  404.html  CLAUDE.md  CNAME  _payload.json  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json
apps/backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  nextest.toml
apps/backend/.cargo/: config.toml
apps/backend/bruno/: README.md  bruno.json  collection.bru
apps/backend/bruno/01-register-verify/: 01-register.bru  02-verify-email.bru  03-login-unverified.bru  04-resend-verification.bru  folder.bru
apps/backend/bruno/02-login/: 01-login.bru  02-me.bru  03-logout.bru  folder.bru
apps/backend/bruno/03-apalis/: 01-list-tasks.bru  folder.bru
apps/backend/bruno/drive/: folder.bru
apps/backend/bruno/environments/: local.bru
apps/backend/config/: entity_openapi.toml
apps/backend/crates/common/: Cargo.toml
apps/backend/crates/entity/: Cargo.toml
apps/backend/crates/github-integration/: Cargo.toml
apps/backend/crates/handler/: Cargo.toml
apps/backend/crates/job/: Cargo.toml
apps/backend/crates/payload/: Cargo.toml
apps/backend/crates/service/: Cargo.toml
apps/backend/docker/: run-migration.sh
apps/backend/docs/: README.md  email-verification-flow.md  password-reset-flow.md  personal-access-tokens-authz.md  redis-trust-boundary.md
apps/backend/migration/: Cargo.toml
apps/backend/migration/src/: lib.rs  m20260520000000_initial_schema.rs  m20260524080400_create_project_members.rs  m20260524080500_add_icon_to_projects.rs  m20260524100000_add_role_check.rs  m20260524120000_add_pat_tenant_binding.rs  m20260525010000_add_drive_quota_to_tenants.rs  m20260525020000_create_drive_folders.rs  m20260525030000_create_drive_files.rs  m20260525040000_create_drive_folder_shares.rs  m20260527010000_add_key_to_projects.rs  m20260527020000_create_project_task_counters.rs  m20260527030000_create_project_statuses.rs  m20260527040000_create_milestones.rs  m20260527050000_create_tasks.rs  m20260527060000_create_task_assignees.rs  m20260527070000_create_task_relations.rs  m20260527080000_add_project_id_to_labels.rs  m20260527090000_create_task_labels.rs  m20260527100000_add_admin_fields_to_users.rs  m20260527110000_create_audit_logs.rs  m20260527120000_create_system_settings.rs  m20260528190000_add_drive_system_max_quota_mb.rs  m20260529010000_create_passkeys.rs  m20260529100000_auth_2fa.rs  m20260529100000_oauth_connections.rs  m20260601160000_add_sessions_revoked_at_to_users.rs  m20260603_add_unique_task_assignees.rs  m20260604_create_sprints.rs  m20260604_create_time_tracking.rs  m20260607_add_sprints_active_unique_index.rs  m20260607_add_tasks_completed_at.rs  m20260607_create_task_comments_and_activities.rs  m20260609_add_personal_projects.rs  m20260609_create_custom_fields.rs  m20260609_create_task_notifications.rs  m20260610_create_task_extensions.rs
apps/backend/src/: auth_helpers.rs  entities.rs  error.rs  extractors.rs  handlers.rs  lib.rs  main.rs  openapi.rs  routes.rs  server.rs  settings.rs
apps/backend/src/dto/: mod.rs  personal_tokens.rs
apps/backend/src/entities/: README.md  audit_logs.rs  drive_files.rs  drive_folder_shares.rs  drive_folders.rs  github_integrations.rs  labels.rs  milestones.rs  mod.rs  notification_settings.rs  notifications.rs  oauth_connections.rs  passkeys.rs  personal_tokens.rs  project_custom_fields.rs  project_members.rs  project_statuses.rs  project_task_counters.rs  project_task_views.rs  projects.rs  recovery_codes.rs  scopes.rs  sprints.rs  system_settings.rs  task_activities.rs  task_assignees.rs  task_attachments.rs  task_comments.rs  task_custom_field_values.rs  task_labels.rs  task_relations.rs  task_timers.rs  task_watchers.rs  tasks.rs  tenants.rs  time_logs.rs  totp_credentials.rs  users.rs  verification_email_outbox.rs
apps/backend/src/handlers/: admin_audit.rs  admin_audit_logs.rs  admin_settings.rs  admin_tenants.rs  admin_users.rs  auth.rs  auth_2fa.rs  custom_fields.rs  drive_files.rs  drive_folders.rs  github.rs  labels.rs  milestones.rs  mod.rs  my_tasks.rs  oauth.rs  passkeys.rs  password_reset.rs  personal_tokens.rs  project_members.rs  projects.rs  sprints.rs  statuses.rs  task_comments.rs  task_extensions.rs  task_notifications.rs  tasks.rs  tenants.rs  time_tracking.rs
apps/backend/src/jobs/: github_webhook.rs  mod.rs  password_reset_email.rs  verification_email.rs
apps/backend/src/middlewares/: admin_gate.rs  logging.rs
apps/backend/src/openapi/: mod.rs  responses.rs
apps/backend/src/payload/: admin_audit_logs.rs  admin_tenants.rs  auth.rs  auth_2fa.rs  custom_fields.rs  drive_files.rs  drive_folder_shares.rs  drive_folders.rs  github.rs  labels.rs  milestones.rs  mod.rs  my_tasks.rs  oauth.rs  password_reset.rs  personal_tokens.rs  project_members.rs  projects.rs  sprints.rs  statuses.rs  task_comments.rs  task_extensions.rs  task_notifications.rs  tasks.rs  tenants.rs  time_tracking.rs  users.rs
apps/backend/src/routes/: admin.rs  auth.rs  drive.rs  labels.rs  mod.rs  personal_tokens.rs  tenants.rs  users.rs
apps/backend/src/services/: README.md
apps/backend/src/utils/: auth.rs  bootstrap_admin.rs  custom_fields.rs  db.rs  drive.rs  email.rs  email_verification.rs  github_api.rs  github_oauth_state.rs  github_token_crypto.rs  http.rs  login_session.rs  mod.rs  notifications.rs  redis.rs  (+12 more)
apps/backend/tests/: admin_tenants_integration.rs  admin_users_integration.rs  auth_2fa_integration.rs  custom_fields_integration.rs  drive_file_content_integration.rs  drive_upload_acl_integration.rs  drive_usage_integration.rs  github_http_integration.rs  github_integration.rs  my_tasks_integration.rs  oauth_integration.rs  password_reset_integration.rs  projects_integration.rs  register_integration.rs  sprints_integration.rs  statuses_integration.rs  task_comments_integration.rs  task_extensions_integration.rs  task_list_integration.rs  task_notifications_integration.rs  tenants_integration.rs  time_tracking_integration.rs  webauthn_integration.rs
(+1240 files in other folders)
