[workspace]
members = ["crates/entity", "crates/common"]
exclude = ["migration"]

[workspace.dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["macros"] }
config = "0.15.22"
dotenvy = "0.15"
redis = { version = "1.2.1", features = ["tokio-comp"] }
redis_pool = "0.10.0"
regex = "1"
sea-orm = { version = "2.0.0-rc.38", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.10"
tracing = "0.1"
url = "2.5"
utoipa = { version = "5.4.0", features = ["uuid", "chrono", "time"] }
validator = { version = "0.20.0", features = ["derive"] }

[package]
name = "backend"
version = "0.1.0"
edition = "2024"
default-run = "backend"

[dependencies]
entity = { path = "crates/entity" }
common = { path = "crates/common" }
axum = { workspace = true, features = ["multipart"] }
sea-orm = { workspace = true, features = [
    "entity-registry",
    "schema-sync",
    "with-chrono",
    "postgres-array",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.52.1", features = ["fs", "io-util", "macros", "rt-multi-thread", "net", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { workspace = true }
uuid = { version = "1", features = ["serde"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
tower-http = { version = "0.7", features = ["cors", "limit"] }
axum_session = { version = "0.20.0" }
axum_session_redispool = { version = "0.11.0" }
dotenvy = { workspace = true }
config = { workspace = true }
axum-valid = "0.25.0"
validator = { workspace = true }
sentry = { version = "0.48.2", features = ["tower-axum-matched-path"] }
tower = "0.5.2"
argon2 = "0.5.3"
anyhow = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
thiserror = { workspace = true }
base64 = "0.22.1"
redis_pool = { workspace = true }
redis = { workspace = true }
url = { workspace = true }
urlencoding = "2.1"
hmac = "0.13"
sha2 = "0.11"
rand = "0.10"
regex = { workspace = true }
subtle = "2.4"
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28"
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "smtp-transport","tokio1", "tokio1-rustls-tls"] }
apalis = { version = "1.0.0-rc.9", features = ["limit", "retry", "tracing"] }
apalis-postgres = { version = "1.0.0-rc.8", default-features = false, features = ["migrate", "tokio-comp", "time"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "time"] }
apalis-board = { version = "1.0.0-rc.8", features = ["axum", "ui", "events"] }
async-trait = "0.1"
bytes = "1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
object_store = { version = "0.11", features = ["aws", "http"] }
mime_guess = "2"
time = { version = "0.3", features = ["serde"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "form"] }
jsonwebtoken = { version = "9", features = ["use_pem"] }
aes-gcm = "0.11"
hex = "0.4"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
webauthn-rs = { version = "0.5.5", features = ["danger-allow-state-serialisation", "danger-credential-internals", "conditional-ui"] }

[dev-dependencies]
cookie = "0.18"
http-body-util = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["cookies", "json", "rustls", "multipart"] }
tower = { version = "0.5.2", features = ["util"] }
urlencoding = "2.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wiremock = "0.6"
serial_test = "3"
webauthn-authenticator-rs = { version = "0.5.5", default-features = false, features = ["softtoken"] }

[profile.dev]
debug = 1

[profile.dev.package."*"]
opt-level = 3
