[workspace]
members = ["crates/entity", "crates/common", "crates/github-integration", "crates/payload", "crates/service", "crates/job", "crates/handler"]
exclude = ["migration"]

[workspace.dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["macros"] }
config = "0.15.22"
dotenvy = "0.15"
redis = { version = "1.2.1", features = ["tokio-comp"] }
redis_pool = "0.10.0"
regex = "1"
sea-orm = { version = "2.0.0-rc.38", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.10"
tracing = "0.1"
url = "2.5"
utoipa = { version = "5.4.0", features = ["uuid", "chrono", "time"] }
validator = { version = "0.20.0", features = ["derive"] }

[package]
name = "backend"
version = "0.1.0"
edition = "2024"
default-run = "backend"

[dependencies]
entity = { path = "crates/entity" }
common = { path = "crates/common" }
service = { path = "crates/service" }
job = { path = "crates/job" }
handler = { path = "crates/handler" }
apalis = { version = "1.0.0-rc.9", features = ["limit", "retry", "tracing"] }
apalis-board = { version = "1.0.0-rc.8", features = ["axum", "ui", "events"] }
axum = { workspace = true, features = ["multipart"] }
axum_session = { version = "0.20.0" }
axum_session_redispool = { version = "0.11.0" }
sea-orm = { workspace = true, features = [
    "entity-registry",
    "schema-sync",
    "with-chrono",
    "postgres-array",
] }
sentry = { version = "0.48.2", features = ["tower-axum-matched-path"] }
serde_json = { workspace = true }
tokio = { version = "1.52.1", features = ["fs", "io-util", "macros", "rt-multi-thread", "net", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.7", features = ["cors", "limit"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

[dev-dependencies]
dotenvy = { workspace = true }
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
cookie = "0.18"
hmac = "0.13"
http-body-util = "0.1"
redis = { workspace = true }
redis_pool = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["cookies", "json", "rustls", "multipart"] }
serde = { workspace = true }
serial_test = "3"
sha2 = "0.11"
tower = { version = "0.5.2", features = ["util"] }
url = { workspace = true }
urlencoding = "2.1"
uuid = { version = "1", features = ["serde"] }
webauthn-authenticator-rs = { version = "0.5.5", default-features = false, features = ["softtoken"] }
webauthn-rs = { version = "0.5.5", features = ["danger-allow-state-serialisation", "danger-credential-internals", "conditional-ui"] }
wiremock = "0.6"
testcontainers-modules = { version = "0.15.0", features = ["postgres", "blocking"] }
libc = "0.2.186"

[profile.dev]
debug = 1

[profile.dev.package."*"]
opt-level = 3
