[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
entity = { path = "../entity" }
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["macros"] }
config = "0.15.22"
dotenvy = "0.15"
redis = { version = "1.2.1", features = ["tokio-comp"] }
redis_pool = "0.10.0"
regex = "1"
sea-orm = { version = "2.0.0-rc.38", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.10"
tracing = "0.1"
url = "2.5"
utoipa = { version = "5.4.0", features = ["uuid", "chrono", "time"] }
validator = { version = "0.20.0", features = ["derive"] }
