[package]
name = "entity"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "2.0.0-rc.38", features = [
    "macros",
    "with-chrono",
    "postgres-array",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
utoipa = { version = "5.4.0", features = ["uuid", "chrono", "time"] }
