[package]
name = "github-integration"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
aes-gcm = "0.11"
anyhow = { workspace = true }
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dotenvy = { workspace = true }
hkdf = "0.13"
jsonwebtoken = { version = "10", features = ["use_pem"] }
rand = "0.10"
redis = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "form"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.11"
thiserror = { workspace = true }
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread"] }
tracing = { workspace = true }
url = { workspace = true }
urlencoding = "2.1"
uuid = { version = "1", features = ["serde"] }
