[package]
name = "job"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
service = { path = "../service" }
apalis = { version = "1.0.0-rc.9", features = ["limit", "retry", "tracing"] }
apalis-postgres = { version = "1.0.0-rc.8", default-features = false, features = ["migrate", "tokio-comp", "time"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["serde"] }
